# wolf-trace-backend

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  DOCS_REORGANIZATION.md  INTEGRATION_CHANGELOG.md  INTEGRATION_GUIDE.md  README.md  create_twelvelabs_index.py  pyproject.toml  test_api.sh
app/: __init__.py  config.py  event_bus.py  graph_state.py  main.py  seed_data.py
app/forensics/: ela.py
app/models/: __init__.py  alert.py  case.py  graph.py  report.py
app/pipelines/: __init__.py  blackboard_controller.py  case_synthesizer.py  classifier.py  clustering.py  forensics.py  forensics_xref.py  network.py  orchestrator.py  recluster_debunk.py
app/routers/: alerts.py  cases.py  files.py  reports.py  seed.py  ws.py
app/services/: ai.py  backboard_client.py  elevenlabs.py  factcheck.py  gemini.py  graph_db.py  graph_queries.py  groq.py  twelvelabs.py
app/utils/: audit.py  ids.py
docs/: API.md  ARCHITECTURE.md  DEVELOPMENT.md  STATUS.md
docs/archive/: CLEANUP.md  FLOW.md  HANDOFF.md  TESTING.md  TEST_RESULTS.md  VERIFICATION.md  temp.md
